--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "envify",
+  "name": "node-envify",
   "version": "1.0.0",
   "description": "Bind configuration to process.env for easy manipulation of modules that use process.env for configuration. Simplifies or execution line in automated builds. ",
   "main": "index.js",
