--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/miketheprogrammer/envify",
   "devDependencies": {
-    "tape": "~2.4.2",
-    "debug": "~0.7.4"
+    "tape": "~2.4.2"
   },
   "dependencies": {
-    "config": "~0.4.35"
+    "config": "~0.4.35",
+    "debug": "~0.7.4"
   }
 }
